# 3d-resume

./: .backup_note  .gitignore  README.md  default.json  main.py  minifier.py  pyproject.toml
3d-sources/: test.json
assets/css/: styles.css  three-cad-viewer.css
assets/html/: template.html
assets/js/: app.js
personal-resume/: .gitignore
personal-resume/assets/html/: template.html
personal-resume/tests/: test_frontend_js.py
src/3d_resume.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/three_d_resume/: server.py  step_to_json.py
tests/: test_browser_console_bridge.py  test_frontend_js.py  test_integration_server.py  test_uv_removed_sections.py
